# version-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: test_server.py
version_mcp/: server.py
