[project]
name = "version-mcp"
version = "0.1.0"
description = "MCP server for looking up package versions from pip, npm, and other package managers"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.25.0",
    "httpx>=0.28.0",
]

[project.scripts]
version-mcp = "version_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "respx>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
